--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,7 @@
         <div class="hero-banner">
             <div class="hero-text">
                 <h1>Donate Blood and Save Life</h1>
-                <p>আসুন রক্তদান কর্মসূচীতে অংশগ্রহন করি এবং মানবতায় এগিয়ে আসি,মানুষ মানুষের জন্য।</p>
+                <p>আসুন রক্তদান কর্মসূচীতে অংশগ্রহন করি এবং মানবতায় এগিয়ে আসি,মানুষ মানুষের জন্য। gfhjjjj</p>
                 <br>
                 <div class="hero-buttons">
                   <a href="#" class="join-donner loader" id="add-donor" style="text-decoration: none; padding: 10px 35px;">Join as Donor</a>
