--- a/views/donate-us.ejs
+++ b/views/donate-us.ejs
@@ -194,7 +194,7 @@
         <button type="button" class="amount-btn" data-amount="5000">৳ 5000</button>
       </div>
       <div class="input-wrapper">
-        <input type="number" id="donationAmount" placeholder="Enter amount" name="donation"  min="1" value="100" autofocus>
+        <input type="number" id="donationAmount" placeholder="Enter amount" name="donation"  min="1" value="100">
         <span class="currency-label">BDT</span>
     </div>
       <button type="submit" id="donateButton">Donate</button>
